Update install.tomcat9.sh